--- a/ubuntu/lshwd-2.0-rc4/debian/changelog
+++ b/ubuntu/lshwd-2.0-rc4/debian/changelog
@@ -1,3 +1,11 @@
+lshwd (2.0-rc4-1pluto14) unstable; urgency=low
+
+  * Return driver "radeon" for all VGA class devices which report manufacturer
+    ATI (0x1002), to avoid updating the PCI ID list each time a new board
+    comes out.
+
+ -- Radu Cristescu <radu.c@plutohome.com>  Wed, 30 Apr 2008 19:55:11 +0300
+
 lshwd (2.0-rc4-1pluto13) unstable; urgency=low
 
   * Return driver "nv" for all VGA class devices which report manufacturer
