--- a/README
+++ b/README
@@ -9,11 +9,13 @@ youruser ALL=(ALL) ALL
 
 The build is unlikely to work if you are logged in as root.
 
-Also, the build will only work on an existing LinuxMCE install and
-so far has only been tested on LinuxMCE 0704 installed from the DVD.
-
-As of Oct 20th, 2007, most things do not build yet...
-This will however install the packages needed to build most components
-of the distro, with the notable exception of libxine.
-
 -- Daniel
+
+Also, the build will only work on an existing LinuxMCE install and
+so far has only been tested on LinuxMCE 0710 installed from the DVD.
+
+As of May 5, 2008 - All major components build. CD/DVD Image building needs
+to be worked on.
+
+-- Thom
+
