--- a/ubuntu/mythtv-trunk/debian/changelog
+++ b/ubuntu/mythtv-trunk/debian/changelog
@@ -1,3 +1,9 @@
+mythtv (0.22.0~trunk17891-0ubuntu1) intrepid; urgency=low
+
+  * updated snapshot
+
+ -- Daniel Kristjansson <danielk@cuymedia.net>  Tue, 22 Jul 2008 12:17:00 -0500
+
 mythtv (0.22.0~trunk17764-0ubuntu1) intrepid; urgency=low
 
   * trunk build for upcoming 0.22 
