--- a/ubuntu/lshwd-2.0-rc4/debian/changelog
+++ b/ubuntu/lshwd-2.0-rc4/debian/changelog
@@ -1,3 +1,11 @@
+lshwd (2.0-rc4-1pluto15) unstable; urgency=low
+
+  * Return driver "intel" for all VGA class devices which report manufacturer
+    Intel (0x1002), to avoid updating the PCI ID list each time a new board
+    comes out.
+
+ -- Radu Cristescu <radu.cx@gmail.com>  Mon, 21 Jul 2008 15:45:22 +0000
+
 lshwd (2.0-rc4-1pluto14) unstable; urgency=low
 
   * Return driver "radeon" for all VGA class devices which report manufacturer
