--- a/ubuntu/lmcevdr-1.1/usr/share/lmcevdrinstaller/install
+++ b/ubuntu/lmcevdr-1.1/usr/share/lmcevdrinstaller/install
@@ -3,12 +3,17 @@
 # LMCEVDR installer package  
 # fasthack for 0710beta
 # Andre Burkart 2008-01-08 (2)
+# extended hack for 0810
+# Peer Oliver Schmidt 2009-03-18
 
 clear
 echo ""
 echo ""
 echo "=== LMCE STUFF =="
 echo ""
+
+# Better not have VDR running during config file update
+invoke-rc.d vdr stop
 
 #channellist templates to lmce
 mkdir /usr/pluto/templates/vdr  > /dev/null
@@ -29,7 +34,43 @@ echo "preconfiguring the settings for VDR..."
 sleep 5
 cp vdr/vdrsettings/svdrphosts.conf /etc/vdr/.  > /dev/null
 cp vdr/vdrsettings/remote.conf /var/lib/vdr/.  > /dev/null
+# cp vdr/vdrsettings/vdr.conf /var/lib/vdr/. > /dev/null
+#
+# Allow access from all devices to streamdev
+grep -v "0.0.0.0" /etc/vdr/plugins/streamdev.conf>/etc/vdr/plugins/streamdev.conf
+echo "0.0.0.0/0">>/etc/vdr/plugins/streamdev.conf
 
+#
+
+IF [ "$PK_Device" = "1" ] 
+then
+	# On the CORE
+	# added configuration from streamdev-server
+	STREAMDEVPLUGIN="streamdev-server"
+	# scrap all old streamdev-server info from setup.conf
+	sed -i "$STREAMDEVPLUGIN/d" /var/lib/vdr/setup.conf>/var/lib/vdr/setup.conf
+	echo "$STREAMDEVPLUGIN.AllowSuspend = 1">>/var/lib/vdr/setup.conf
+	echo "$STREAMDEVPLUGIN.MaxClients = 6">>/var/lib/vdr/setup.conf
+	# Needed for UPnP server mediatomb for live TV
+	echo "$STREAMDEVPLUGIN.StartHTTPServer = 1">>/var/lib/vdr/setup.conf
+	# Needed for live TV on MDs.
+	echo "$STREAMDEVPLUGIN.StartVTPServer = 1">>/var/lib/vdr/setup.conf
+	echo "$STREAMDEVPLUGIN.SuspendMode = 1">>/var/lib/vdr/setup.conf
+else
+	# all other systems utilize the streamdev-server on the core via the streamdev-client
+	# added configuration from streamdev-client
+	STREAMDEVPLUGIN="streamdev-client"
+	# scrap all old streamdev-server info from setup.conf
+	sed -i "$STREAMDEVPLUGIN/d" /var/lib/vdr/setup.conf>/var/lib/vdr/setup.conf
+	#
+	echo "$STREAMDEVPLUGIN.'RemoteIp = 192.168.80.1">>/var/lib/vdr/setup.conf
+	echo "$STREAMDEVPLUGIN.'RemotePort = 2004">>/var/lib/vdr/setup.conf
+	echo "$STREAMDEVPLUGIN.'StartClient = 1">>/var/lib/vdr/setup.conf
+	# StreamFilters sends additional information, like EPG
+	echo "$STREAMDEVPLUGIN.'StreamFilter = 1">>/var/lib/vdr/setup.conf
+	# Obsolete due to StreamFilters
+	echo "$STREAMDEVPLUGIN.'SyncEPG = 0">>/var/lib/vdr/setup.conf
+fi		
 chown vdr:vdr /var/lib/vdr/*
 
 
@@ -38,5 +79,6 @@ echo "++---------------------------- D O N E  ----------------------------------
 echo "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++"
 echo ""
 echo ""
-/etc/init.d/vdr restart
+invoke-rc.d vdr start
+
 
