--- a/ubuntu/lmcevdr-1.1/usr/share/lmcevdrinstaller/install
+++ b/ubuntu/lmcevdr-1.1/usr/share/lmcevdrinstaller/install
@@ -30,8 +30,8 @@ echo "======= LMCE SIDE DONE ========"
 
 #SETTINGS
 echo "preconfiguring the settings for VDR..."
-/etc/init.d/vdr stop
-sleep 5
+#/etc/init.d/vdr stop
+#sleep 5
 cp vdr/vdrsettings/svdrphosts.conf /etc/vdr/.  > /dev/null
 cp vdr/vdrsettings/remote.conf /var/lib/vdr/.  > /dev/null
 # cp vdr/vdrsettings/vdr.conf /var/lib/vdr/. > /dev/null
@@ -46,9 +46,9 @@ if [ "$PK_Device" = "1" ]
 then
 	# On the CORE
 	# added configuration from streamdev-server
-	STREAMDEVPLUGIN="streamdev-server"
+	STREAMDEVPLUGIN="/streamdev-server"
 	# scrap all old streamdev-server info from setup.conf
-	sed -i "$STREAMDEVPLUGIN/d" /var/lib/vdr/setup.conf>/var/lib/vdr/setup.conf
+	sed -i "$STREAMDEVPLUGIN/d" /var/lib/vdr/setup.conf
 	echo "$STREAMDEVPLUGIN.AllowSuspend = 1">>/var/lib/vdr/setup.conf
 	echo "$STREAMDEVPLUGIN.MaxClients = 6">>/var/lib/vdr/setup.conf
 	# Needed for UPnP server mediatomb for live TV
@@ -59,9 +59,9 @@ then
 else
 	# all other systems utilize the streamdev-server on the core via the streamdev-client
 	# added configuration from streamdev-client
-	STREAMDEVPLUGIN="streamdev-client"
+	STREAMDEVPLUGIN="/streamdev-client"
 	# scrap all old streamdev-server info from setup.conf
-	sed -i "$STREAMDEVPLUGIN/d" /var/lib/vdr/setup.conf>/var/lib/vdr/setup.conf
+	sed -i "$STREAMDEVPLUGIN/d" /var/lib/vdr/setup.conf
 	#
 	echo "$STREAMDEVPLUGIN.'RemoteIp = 192.168.80.1">>/var/lib/vdr/setup.conf
 	echo "$STREAMDEVPLUGIN.'RemotePort = 2004">>/var/lib/vdr/setup.conf
