refs #54 - svdrphosts manipulation not needed in install as it is done by copying a working svdrphosts.conf anyhow - enable VDR to start and make sure the video dir exists

--- a/ubuntu/lmcevdr-1.1/usr/share/lmcevdrinstaller/install
+++ b/ubuntu/lmcevdr-1.1/usr/share/lmcevdrinstaller/install
@@ -11,20 +11,21 @@ echo ""
 echo ""
 echo "=== LMCE STUFF =="
 echo ""
+pushd /usr/share/lmcevdrinstaller
 
 # Better not have VDR running during config file update
 invoke-rc.d vdr stop
 
 #channellist templates to lmce
-mkdir /usr/pluto/templates/vdr  > /dev/null
-cp lmce/channellists/* /usr/pluto/templates/vdr/.  > /dev/null
+mkdir -p /usr/pluto/templates/vdr  > /dev/null
+cp ./lmce/channellists/* /usr/pluto/templates/vdr/.  > /dev/null
 
 #vdr lmce Database mappings
 mysql -u root -e "CREATE DATABASE IF NOT EXISTS pluto_vdr;"
-cat lmce/pluto_vdr.dump | /usr/bin/mysql pluto_vdr
+cat ./lmce/pluto_vdr.dump | /usr/bin/mysql pluto_vdr
 
 #scripts for webadmin
-cp -a lmce/scripts/setVDR.sh /usr/pluto/bin/.  >/dev/null
+cp -a ./lmce/scripts/setVDR.sh /usr/pluto/bin/.  >/dev/null
 
 echo "======= LMCE SIDE DONE ========"
 
@@ -32,15 +33,28 @@ echo "======= LMCE SIDE DONE ========"
 echo "preconfiguring the settings for VDR..."
 #/etc/init.d/vdr stop
 #sleep 5
-cp vdr/vdrsettings/svdrphosts.conf /etc/vdr/.  > /dev/null
-cp vdr/vdrsettings/remote.conf /var/lib/vdr/.  > /dev/null
+cp ./vdr/vdrsettings/svdrphosts.conf /etc/vdr/.  > /dev/null
+cp ./vdr/vdrsettings/remote.conf /var/lib/vdr/.  > /dev/null
 # cp vdr/vdrsettings/vdr.conf /var/lib/vdr/. > /dev/null
 #
 # Allow access from all devices to streamdev
-grep -v "0.0.0.0" /etc/vdr/plugins/streamdev.conf>/etc/vdr/plugins/streamdev.conf
-echo "0.0.0.0/0">>/etc/vdr/plugins/streamdev.conf
+#grep -v "0.0.0.0" /etc/vdr/plugins/streamdev.conf>/etc/vdr/plugins/streamdev.conf
+#echo "0.0.0.0/0">>/etc/vdr/plugins/streamdev.conf
+
+# TODO: The video dir needs to be put under the /home/pubic... structure.
+# Make sure a video dir exists.
+mkdir -p /var/lib/video.00
+chown -R vdr:vdr /var/lib/video.00
 
 #
+
+# Make sure VDR is enabled
+sed -i "/^ENABLED/d" /etc/default/vdr
+echo "ENABLED=1">>/etc/default/vdr
+
+# And don't let VDR shutdown the system
+sed -i "/^ENABLE_SHUTDOWN/d" /etc/default/vdr
+echo "ENABLE_SHUTDOWN=0">>/etc/default/vdr
 
 if [ "$PK_Device" = "1" ] 
 then
@@ -72,6 +86,7 @@ else
 	echo "$STREAMDEVPLUGIN.SyncEPG = 0">>/var/lib/vdr/setup.conf
 fi		
 chown vdr:vdr /var/lib/vdr/*
+
 
 
 echo "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++"
