--- a/src/DCE-Whisperer/debian/changelog
+++ b/src/DCE-Whisperer/debian/changelog
@@ -1,3 +1,9 @@
+dce-whisperer (3.0.7) unstable; urgency=low
+
+  * Prevent shell expansion of DCE parameters
+
+ -- Radu C <radu.gx@gmail.com>  Mon, 12 Apr 2010 13:37:58 +0100
+
 dce-whisperer (3.0.6) unstable; urgency=low
 
   * Fix baud rate handling for serial devices
