Refs #687 - Mark the debs as LinuxMCE debs, and provide mythtv-transcode-utils from mythtv-backend

--- a/ubuntu/mythtv-0.23/debian/changelog
+++ b/ubuntu/mythtv-0.23/debian/changelog
@@ -1,3 +1,9 @@
+mythtv (0.23-0.1) unstable; urgency=low
+
+  * Special LinuxMCE built.
+
+ -- Peer Oliver Schmidt <peer.oliver.schmidt@linuxmce.org> Fri, 21 May 2010 11:31:04 +0200
+
 mythtv (0.23-0.0) unstable; urgency=low
 
   * New upstream release.
