--- a/ubuntu/v4l-modules-source/debian/changelog
+++ b/ubuntu/v4l-modules-source/debian/changelog
@@ -1,3 +1,10 @@
+v4l2-modules (lmce-20100531) Intrepid; urgency=low
+
+  * Modified version numbering
+  * Added execute bit to the rules file
+
+ -- Peer Oliver Schmidt <peer.oliver.schmidt@linuxmce.org>  Thu, 31 May 2010 10:53:19 +0200
+
 v4l2-modules (304cfde05b3f-0ubuntu2~ppa1i) Intrepid; urgency=low
 
   * DKMS package for V4L
