--- a/ubuntu/v4l-modules-source/debian/changelog
+++ b/ubuntu/v4l-modules-source/debian/changelog
@@ -1,3 +1,9 @@
+v4l2-modules (lmce20100610-0ubuntu1~ppa1i) Intrepid; urgency=low
+
+  * Fix naming convention and add replace to control file
+
+ -- Mandingo <Mandingo@Mydingo.com>  Thu, 10 Jun 2010 04:54:19 -0500
+
 v4l2-modules (lmce20100531-0ubuntu1~ppa1i) Intrepid; urgency=low
 
   * Modified version numbering
