--- a/ubuntu/vdr-plugin-remotetimers-0.1.3/debian/changelog
+++ b/ubuntu/vdr-plugin-remotetimers-0.1.3/debian/changelog
@@ -1,3 +1,9 @@
+vdr-plugin-remotetimers (0.1.3-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Peer Oliver Schmidt <peer.oliver.schmidt@linuxmce.org>  Sun, 13 Jun 2010 13:08:00 +0200
+
 vdr-plugin-remotetimers (0.1.2-1) unstable; urgency=low
 
   * New upstream release
