--- a/ubuntu/asterisk/freepbx/debian/changelog
+++ b/ubuntu/asterisk/freepbx/debian/changelog
@@ -1,3 +1,9 @@
+freepbx (0+2.3.1-3) unstable; urgency=low
+
+  * Fixes for warnings in admin panel
+
+ -- los93sol <los93sol@linuxmce.org>  Sun, 04 Jul 2008 16:50:26 +0200
+
 freepbx (0+2.3.1-2) unstable; urgency=low
 
   * Changed postinstall to suit upgrades better
