--- a/ubuntu/xine-lib-1.1.16.4/debian/changelog
+++ b/ubuntu/xine-lib-1.1.16.4/debian/changelog
@@ -1,3 +1,8 @@
+xine-lib (1.1.16.4-0ubuntu6-lmce) intrepid; urgency=low
+  * Release for LinuxMCE0810
+  * vdpau extensions as of rev285
+  * Backport of Matroska container support from xine-lib 1.1.18.1
+  
 xine-lib (1.1.16.4-0ubuntu6) karmic; urgency=low
 
   * Release for freeVDR (>=2.0e)
