open serial port once, pass it to TestSerial, socat, etc. - at least one serial port driver forgets the parameter after TestSerialPort finishes

--- a/src/DCE-Whisperer/debian/changelog
+++ b/src/DCE-Whisperer/debian/changelog
@@ -1,14 +1,22 @@
+dce-whisperer (3.0.9) unstable; urgency=low
+
+  * Open the serial port once and use this file descriptor with the rest of
+    the operations (TestSerialPort, etc.). At least one driver forgets the
+    parameters after TestSerialPort sets them if we don't do things this way.
+
+ -- Radu C <radu.cx@gmail.com>  Wed, 11 Aug 2010 23:53:25 +0100
+
 dce-whisperer (3.0.8) unstable; urgency=low
 
   * Moved TranslateSerialPort out of the framework, into Utils.sh
 
- -- Radu C <radu.gx@gmail.com>  Tue, 27 Apr 2010 15:38:27 +0100
+ -- Radu C <radu.cx@gmail.com>  Tue, 27 Apr 2010 15:38:27 +0100
 
 dce-whisperer (3.0.7) unstable; urgency=low
 
   * Prevent shell expansion of DCE parameters
 
- -- Radu C <radu.gx@gmail.com>  Mon, 12 Apr 2010 13:37:58 +0100
+ -- Radu C <radu.cx@gmail.com>  Mon, 12 Apr 2010 13:37:58 +0100
 
 dce-whisperer (3.0.6) unstable; urgency=low
 
@@ -17,7 +25,7 @@ dce-whisperer (3.0.6) unstable; urgency=low
     of SendMessage
   * Reset the delayed message queue after sending the messages
 
- -- Radu C <radu.gx@gmail.com>  Thu, 18 Jun 2009 21:50:50 +0000
+ -- Radu C <radu.cx@gmail.com>  Thu, 18 Jun 2009 21:50:50 +0000
 
 dce-whisperer (3.0.5) unstable; urgency=low
 
@@ -25,7 +33,7 @@ dce-whisperer (3.0.5) unstable; urgency=low
     reconnected
   * Add support for back-to-back command delay towards the device
 
- -- Radu C <radu.gx@gmail.com>  Wed, 10 Jun 2009 01:39:04 +0000
+ -- Radu C <radu.cx@gmail.com>  Wed, 10 Jun 2009 01:39:04 +0000
 
 dce-whisperer (3.0.4) unstable; urgency=low
 
@@ -33,27 +41,27 @@ dce-whisperer (3.0.4) unstable; urgency=low
   * Fix calls for Unknown and Child commands
   * Fail if serial port is missing parameters
 
- -- Radu C <radu.gx@gmail.com>  Tue, 09 Jun 2009 01:46:51 +0100
+ -- Radu C <radu.cx@gmail.com>  Tue, 09 Jun 2009 01:46:51 +0100
 
 dce-whisperer (3.0.3) unstable; urgency=low
 
   * Added TranslateSerialPort function
 
- -- Radu C <radu.gx@gmail.com>  Sun, 07 Jun 2009 04:30:07 +0000
+ -- Radu C <radu.cx@gmail.com>  Sun, 07 Jun 2009 04:30:07 +0000
 
 dce-whisperer (3.0.2) unstable; urgency=low
 
   * Fixes Log function
   * Prevent commands from being sent before the DCE socket it alive
 
- -- Radu C <radu.gx@gmail.com>  Wed, 03 Jun 2009 14:58:57 +0000
+ -- Radu C <radu.cx@gmail.com>  Wed, 03 Jun 2009 14:58:57 +0000
 
 dce-whisperer (3.0.1) unstable; urgency=low
 
   * Fixes for DCE-connect.sh: update fdread and fdwrite calls for DCE
     communication
 
- -- Radu C <radu.gx@gmail.com>  Tue, 02 Jun 2009 17:29:02 +0100
+ -- Radu C <radu.cx@gmail.com>  Tue, 02 Jun 2009 17:29:02 +0100
 
 dce-whisperer (3.0) unstable; urgency=low
 
@@ -65,26 +73,26 @@ dce-whisperer (3.0) unstable; urgency=low
     has lowercase 'w'. One day I'll wonder what I was thinking, but today I
     like this naming style :)
 
- -- Radu C <radu.gx@gmail.com>  Fri, 01 May 2009 23:20:25 +0100
+ -- Radu C <radu.cx@gmail.com>  Fri, 01 May 2009 23:20:25 +0100
 
 dce-whisperer (2.0-2) unstable; urgency=low
 
   * URLDecode the command received from script. Put quotes around spaced
     parameters.
 
- -- Radu C <radu.gx@gmail.com>  Wed, 25 Feb 2009 21:05:02 +0000
+ -- Radu C <radu.cx@gmail.com>  Wed, 25 Feb 2009 21:05:02 +0000
 
 dce-whisperer (2.0-1) unstable; urgency=low
 
   * Don't put empty parameters in the commands sent to the shell script
 
- -- Radu C <radu.gx@gmail.com>  Wed, 25 Feb 2009 21:05:02 +0000
+ -- Radu C <radu.cx@gmail.com>  Wed, 25 Feb 2009 21:05:02 +0000
 
 dce-whisperer (2.0) unstable; urgency=low
 
   * Changed the way the Whisperer signals its termination
 
- -- Radu C <radu.gx@gmail.com>  Thu, 12 Feb 2009 19:43:30 +0000
+ -- Radu C <radu.cx@gmail.com>  Thu, 12 Feb 2009 19:43:30 +0000
 
 dce-whisperer (1.0) unstable; urgency=low
 
