--- a/ubuntu/asterisk-1.4.21.2~dfsg/debian/changelog
+++ b/ubuntu/asterisk-1.4.21.2~dfsg/debian/changelog
@@ -1,3 +1,9 @@
+asterisk (1:1.4.21.3~lmce) intrepid-security; urgency=low
+
+  * SIP startup audio patch
+
+ -- LinuxMCE Developer sambuca <developer@linuxmce.org>  Sun, 12 Jun 2011 16:30:11 +0200
+
 asterisk (1:1.4.21.2~dfsg-1ubuntu3.1) intrepid-security; urgency=low
 
   * SECURITY UPDATE: information leak in IAX2 authentication
