--- a/ubuntu/asterisk/freepbx/debian/changelog
+++ b/ubuntu/asterisk/freepbx/debian/changelog
@@ -1,3 +1,11 @@
+freepbx (0+2.3.1-4) unstable; urgency=low
+
+  * Add a Provides: to the control file, as it provides
+    asterisk-custom-config files. That way, an asterisk update won't
+    overwrite our settings.
+
+ -- Peer Oliver Schmidt <peer.oliver.schmidt@linuxmce.org>  Mon, 13 Jun 2011 19:02:26 +0200
+
 freepbx (0+2.3.1-3) unstable; urgency=low
 
   * Fixes for warnings in admin panel
