--- a/ubuntu/asterisk-1.4.21.2~dfsg/debian/changelog
+++ b/ubuntu/asterisk-1.4.21.2~dfsg/debian/changelog
@@ -1,3 +1,9 @@
+asterisk (1:1.4.21.4~lmce) intrepid-security; urgency=low
+
+  * remove asterisk-config dependency from our Asterisk.
+
+ -- Peer Oliver Schmidt <peer.oliver.schmidt@linuxmce.org>  Sun, 11 Jul 2011 08:22:11 +0200
+
 asterisk (1:1.4.21.3~lmce) intrepid-security; urgency=low
 
   * SIP startup audio patch
