--- a/ubuntu/asterisk/freepbx/debian/changelog
+++ b/ubuntu/asterisk/freepbx/debian/changelog
@@ -1,3 +1,15 @@
+freepbx (0+2.3.1-7) unstable; urgency=low
+
+  * Typo fix
+
+ -- Peer Oliver Schmidt <peer.oliver.schmidt@linuxmce.org>  Thu, 21 Jul 2011 22:00:26 +0200
+
+freepbx (0+2.3.1-6) unstable; urgency=low
+
+  * Re-Add Provides Asterisk-custom-config
+
+ -- Peer Oliver Schmidt <peer.oliver.schmidt@linuxmce.org>  Thu, 21 Jul 2011 19:58:26 +0200
+
 freepbx (0+2.3.1-5) unstable; urgency=low
 
   * Add asterisk.conf so we do not need additional config packages.
