--- a/ubuntu/asterisk-addons-1.6.2.0/debian/changelog
+++ b/ubuntu/asterisk-addons-1.6.2.0/debian/changelog
@@ -1,3 +1,9 @@
+asterisk-addons (1.6.2.0-2-lmce) unstable; urgency=low
+
+  * Remove backports/etch.
+
+ -- Peer Oliver Schmidt <peer.oliver.schmidt@linuxmce.org>  Tue, 04 Oct 2011 09:09:51 +0200
+
 asterisk-addons (1.6.2.0-1) unstable; urgency=low
 
   [ Tzafrir Cohen ]
