--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,3 +1,9 @@
+lmce-asterisk (0+0.1.0-2) unstable; urgency=low
+
+  * Added extra sounds, let pluto-asterisk live (for now)
+
+ -- Serge Wagener <serge@linuxmce.org>  Mon, 06 Oct 2011 12:30:00 +0200
+
 lmce-asterisk (0+0.1.0-1) unstable; urgency=low
 
   * Initial packaging
