--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,14 +1,20 @@
+lmce-asterisk (0+0.1.0-4) unstable; urgency=low
+
+  * Configure only in firstboot, after asterisk has been installed
+
+ -- Serge Wagener <serge@linuxmce.org>  Sun, 09 Oct 2011 20:30:00 +0200
+
 lmce-asterisk (0+0.1.0-3) unstable; urgency=low
 
   * Some dependency changes to let it install before pluto-asterisk
 
- -- Serge Wagener <serge@linuxmce.org>  Mon, 08 Oct 2011 19:00:00 +0200
+ -- Serge Wagener <serge@linuxmce.org>  Sat, 08 Oct 2011 19:00:00 +0200
 
 lmce-asterisk (0+0.1.0-2) unstable; urgency=low
 
   * Added extra sounds, let pluto-asterisk live (for now)
 
- -- Serge Wagener <serge@linuxmce.org>  Mon, 06 Oct 2011 12:30:00 +0200
+ -- Serge Wagener <serge@linuxmce.org>  Thu, 06 Oct 2011 12:30:00 +0200
 
 lmce-asterisk (0+0.1.0-1) unstable; urgency=low
 
