--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,3 +1,9 @@
+lmce-asterisk (0+0.2.0-1) unstable; urgency=low
+
+  * Correctly configure outgoing emergency numbers in dialplan
+
+ -- Serge Wagener <serge@linuxmce.org>  Mon, 10 Oct 2011 21:00:00 +0200
+
 lmce-asterisk (0+0.1.0-4) unstable; urgency=low
 
   * Configure only in firstboot, after asterisk has been installed
