Refs #1272 - Configure lmce-asterisk package only if asterisk db existed to not break mce-install

--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,3 +1,9 @@
+lmce-asterisk (0+0.2.0-2) unstable; urgency=low
+
+  * Only configure package if asterisk db already existed to not break mce-install
+
+ -- Serge Wagener <serge@linuxmce.org>  Mon, 10 Oct 2011 21:00:00 +0200
+
 lmce-asterisk (0+0.2.0-1) unstable; urgency=low
 
   * Correctly configure outgoing emergency numbers in dialplan
