--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,3 +1,9 @@
+lmce-asterisk (0+0.2.0-4) unstable; urgency=low
+
+  * Replaced MeetMe with ConfBridge as that does not need dahdi (zaptel) modules
+
+ -- Serge Wagener <serge@linuxmce.org>  Tue, 11 Oct 2011 15:30:00 +0200
+
 lmce-asterisk (0+0.2.0-3) unstable; urgency=low
 
   * Adding files from obsolete asterisk-pluto package to this package
