--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,3 +1,9 @@
+lmce-asterisk (0+0.2.0-5) unstable; urgency=low
+
+  * Replaced some GoTo in diaplan with new syntax, speed up parsing
+
+ -- Serge Wagener <serge@linuxmce.org>  Tue, 12 Oct 2011 15:45:00 +0200
+
 lmce-asterisk (0+0.2.0-4) unstable; urgency=low
 
   * Replaced MeetMe with ConfBridge as that does not need dahdi (zaptel) modules
