--- a/ubuntu/asterisk/Chan_SCCP-3.0.4_STABLE/debian/changelog
+++ b/ubuntu/asterisk/Chan_SCCP-3.0.4_STABLE/debian/changelog
@@ -1,3 +1,9 @@
+chan-sccp-b (3.0.0-4.1) stable; urgency=low
+
+  * added conflict with chan-scco
+
+ -- Serge Wagener <serge@linuxmce.org>  Fri, 14 Oct 2011 117:00:00 +0200
+
 chan-sccp-b (3.0.0-3.5) stable; urgency=low
 
   * Fixed/Improved:
