--- a/ubuntu/Coherence-0.6.6.2/debian/changelog
+++ b/ubuntu/Coherence-0.6.6.2/debian/changelog
@@ -1,3 +1,10 @@
+coherence (0.6.6-3) unstable; urgency=low
+
+  * Change dependency for lucid
+  * Limit LinuxMCE Backend to return only existing files (File.Missing != 1)
+
+ -- Peer Oliver Schmidt <developers@linuxmce.org>  Sat, 22 Oct 2011 17:20:00 +0200
+
 coherence (0.6.6-2) unstable; urgency=low
 
   * New upstream release
