Refs #757,434 - Make note of the source of the VDR stream patch

--- a/ubuntu/Coherence-0.6.6.2/debian/changelog
+++ b/ubuntu/Coherence-0.6.6.2/debian/changelog
@@ -2,6 +2,7 @@ coherence (0.6.6-3) unstable; urgency=low
 
   * Change dependency for lucid
   * Limit LinuxMCE Backend to return only existing files (File.Missing != 1)
+  * Add vdr stream patch from http://coherence.beebits.net/ticket/296
 
  -- Peer Oliver Schmidt <developers@linuxmce.org>  Sat, 22 Oct 2011 17:20:00 +0200
 
