--- a/ubuntu/asterisk/chan_sccp_v4/debian/changelog
+++ b/ubuntu/asterisk/chan_sccp_v4/debian/changelog
@@ -1,3 +1,9 @@
+chan-sccp-b (4.0.0-0) unstable; urgency=low
+
+  * Trunk which is going to be v4
+
+ -- Peer Oliver Schmidt <developer@linuxmce.org>  Tue, 25 Oct 2010 15:38:40 +0200
+
 chan-sccp-b (3.0.0-3) unstable; urgency=low
 
   * Release Candidate 3
