--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,3 +1,9 @@
+lmce-asterisk (0+0.3.0-3) unstable; urgency=low
+
+  * Fixed a bug in db creation sql file
+
+ -- Serge Wagener <serge@linuxmce.org>  Tue, 8 Nov 2011 07:15:00 +0200
+
 lmce-asterisk (0+0.3.0-2) unstable; urgency=low
 
   * Fixed a lot of small bugs
