Refs #1328 - Modified sip_devices table structure to hold insecure=invite string on SIP provider lines. Incoming calls should not have authentication problems any longer. Some other small bugfixes

--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,3 +1,10 @@
+lmce-asterisk (0+0.3.0-4) unstable; urgency=low
+
+  * Add dependency to asterisk-voicemail
+  * Some table structure modifications
+
+ -- Serge Wagener <serge@linuxmce.org>  Tue, 14 Nov 2011 20:00:00 +0200
+
 lmce-asterisk (0+0.3.0-3) unstable; urgency=low
 
   * Fixed a bug in db creation sql file
