--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,3 +1,9 @@
+lmce-asterisk (0+0.3.1-1) unstable; urgency=low
+
+  * Added support for CISCO mobile iOS app softphone (see http://wiki.linuxmce.org/index.php/Cisco_Mobile)
+
+ -- Serge Wagener <serge@linuxmce.org>  Tue, 16 Nov 2011 18:00:00 +0200
+
 lmce-asterisk (0+0.3.0-4) unstable; urgency=low
 
   * Add dependency to asterisk-voicemail
