--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -2,8 +2,10 @@ lmce-asterisk (0+0.3.1-2) unstable; urgency=low
 
   * Fixed #1345 - bug on incoming and outgoing sip connections
   * Refs #1332 - experimental gtalk phoneline provider support
+  * Refs #1328 - Don't clear peers from realtime cache, makes incoming
+    calls not work after some minutes
 
- -- Serge Wagener <serge@linuxmce.org>  Mon, 28 Nov 2011 20:19:35 +0100
+ -- Serge Wagener <serge@linuxmce.org>  Mon, 28 Nov 2011 21:13:29 +0100
 
 lmce-asterisk (0+0.3.1-1) unstable; urgency=low
 
