--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -5,8 +5,9 @@ lmce-asterisk (0+0.3.1-2) unstable; urgency=low
   * Refs #1328 - Don't clear peers from realtime cache, makes incoming
     calls not work after some minutes
   * Fixed bug preventing IAX2 provider registration
+  * Fixed some IAX provider trunk bug's
 
- -- Serge Wagener <serge@linuxmce.org>  Thu, 01 Dec 2011 17:39:04 +0100
+ -- Serge Wagener <serge@linuxmce.org>  Wed, 28 Dec 2011 19:24:24 +0100
 
 lmce-asterisk (0+0.3.1-1) unstable; urgency=low
 
