--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,8 +1,9 @@
 lmce-asterisk (0+0.3.2-1) unstable; urgency=low
 
   * Adding tools for future fax support as dependency
+  * Add asterisk user to sudoers for dialplan scripts
 
- -- Serge Wagener <serge@linuxmce.org>  Thu, 05 Apr 2012 12:06:51 +0200
+ -- Serge Wagener <serge@linuxmce.org>  Thu, 05 Apr 2012 20:17:45 +0200
 
 lmce-asterisk (0+0.3.1-2) unstable; urgency=low
 
