--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,3 +1,9 @@
+lmce-asterisk (0+0.3.2-1ubuntu1) lucid; urgency=low
+
+  * Adding primitive fax send support, this is work in progress
+
+ -- Serge Wagener <serge@linuxmce.org>  Tue, 10 Apr 2012 16:38:17 +0200
+
 lmce-asterisk (0+0.3.2-1) unstable; urgency=low
 
   * Adding tools for future fax support as dependency
