Refs #1455 - Increase build number to force installation and postinst to run

--- a/src/lmce-asterisk/debian/changelog
+++ b/src/lmce-asterisk/debian/changelog
@@ -1,3 +1,9 @@
+lmce-asterisk (0+0.3.2-1ubuntu2) lucid; urgency=low
+
+  * Some bug fixes
+
+ -- Serge Wagener <serge@linuxmce.org>  Sun, 03 Jun 2012 20:47:32 +0200
+
 lmce-asterisk (0+0.3.2-1ubuntu1) lucid; urgency=low
 
   * Adding primitive fax send support, this is work in progress
